fix: hide box bg on mobile

--- a/wp-content/themes/abdulay/sass/site/pages/_procedimentos.scss
+++ b/wp-content/themes/abdulay/sass/site/pages/_procedimentos.scss
@@ -56,16 +56,18 @@
       z-index: 0;
     }
 
-    &::after {
-      background: #619495;
-      bottom: 31px;
-      content: "";
-      display: block;
-      height: 12px;
-      left: 150px;
-      position: absolute;
-      width: 165px;
-      z-index: 1;
+    @include media-breakpoint-up(sm) {
+      &::after {
+        background: #619495;
+        bottom: 31px;
+        content: "";
+        display: block;
+        height: 12px;
+        left: 150px;
+        position: absolute;
+        width: 165px;
+        z-index: 1;
+      }
     }
 
     a {
